learn built-in directives ngSwitchCase

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -20,3 +20,12 @@
     </table>
    </div>
 </div>
+<br>
+<div>
+    <input type="text" #data  [(ngModel)]="userInput"  /> <button (click)="Submit()">Search</button>
+</div>
+<div [ngSwitch]="role">
+    <div *ngSwitchCase="'user'">Welocme User</div>
+    <div *ngSwitchCase="'admin'">Welocme Admin</div>
+    <div *ngSwitchDefault>Welocme Guest</div>
+</div>
