--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -10,8 +10,8 @@
             <th>Room Status</th>
             <th>Room Image</th>
         </tr>
-        <tr *ngFor="let room of roomList ; let e = even ; let o = odd">
-            <td>{{e}}</td>
+        <tr [ngClass]=" e? 'even' : 'odd'" *ngFor="let room of roomList ; let e = even ; let o = odd">
+            <td>{{e ? "Even" : "Odd"}}</td>
             <td>{{room.roomNumber}}</td>
             <td>{{room.roomType}}</td>
             <td>{{room.roomPrice}}</td>
