learn built-in directives ngStyle

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -15,7 +15,7 @@
             <td>{{room.roomNumber}}</td>
             <td>{{room.roomType}}</td>
             <td>{{room.roomPrice}}</td>
-            <td>{{room.roomStatus}}</td>
+            <td [ngStyle]="{ 'color':room?.roomStatus?'white' :'blue' }">{{room.roomStatus}}</td>
             <td>{{room.roomImage}}</td>
     </table>
    </div>
