--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -14,7 +14,7 @@
             <td>{{e ? "Even" : "Odd"}}</td>
             <td>{{room.roomNumber}}</td>
             <td>{{room.roomType}}</td>
-            <td>{{room.roomPrice}}</td>
+            <td>{{room.roomPrice | currency}}</td>
             <td [ngStyle]="{ 'color':room?.roomStatus?'white' :'blue' }">{{room.roomStatus}}</td>
             <td>{{room.roomImage}}</td>
     </table>
