--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -10,7 +10,7 @@
             <th>Room Status</th>
             <th>Room Image</th>
         </tr>
-        <tr [ngClass]=" e? 'even' : 'odd'" *ngFor="let room of roomList ; let e = even ; let o = odd">
+        <tr [ngClass]=" e? 'even' : 'odd'" *ngFor="let room of roomList | slice : 0:2 ; let e = even ; let o = odd">
             <td>{{e ? "Even" : "Odd"}}</td>
             <td>{{room.roomNumber}}</td>
             <td>{{room.roomType}}</td>
